--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </div>
     
     <footer>
-        <p>© 2023 세계시민 교육 - 모든 권리 보유</p>
+        <p>© 2025 초등 세계시민 교육 - 배움의 달인 김문정</p>
         <p>이 교재는 아동 노동 문제에 대한 인식을 높이고 문제 해결에 기여하기 위해 제작되었습니다.</p>
     </footer>
 
